--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           <button class="paper">paper</button>
           <button class="scissors">scissors</button>
         </div>
+        <div class="reset">
+          <button>Reset</button>
+        </div>
       </div>
     </section>
 
